# Example-SYCL-Pathtracer

./: .gitignore  CMakeLists.txt  main.cc  main.cpp
include/: VariantContainer.hpp  camera.h  material.h  object.h  ray.h  utils.h  variantcontainer.h
include/objects/: mesh.h  plane.h  sphere.h
src/: VariantContainer.tcc  camera.cc  material.cc  object.cc  utils.cc  variantcontainer.inc
src/objects/: mesh.cc  plane.cc  sphere.cc
